fix: caption alignment

--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -8,6 +8,12 @@
   display: inline-block;
 }
 
+@media (min-width: 42rem) {
+  :host {
+    display: inline-block !important;
+  }
+}
+
 .label-text {
   [inline] & {
     @include mixins.visually-hidden;
@@ -34,6 +40,7 @@
   border: 1px solid var(--kd-color-border-forms-default);
   border-radius: 4px;
   height: 48px;
+  padding: 0 48px 0 16px;
   cursor: pointer;
   font-weight: 400;
   white-space: nowrap;
@@ -44,7 +51,6 @@
     all: unset;
     width: 100%;
     text-align: left;
-    padding: 0 48px 0 16px;
     box-sizing: border-box;
     display: block;
 
