--- a/src/components/reusable/pagination/pagination-page-size-dropdown.scss
+++ b/src/components/reusable/pagination/pagination-page-size-dropdown.scss
@@ -20,7 +20,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0;
   box-sizing: border-box;
 }
 
